--- a/index.html
+++ b/index.html
@@ -50,57 +50,11 @@
     filter:blur(28px) brightness(0.9); z-index:-1; transform:scale(1.08);
   }
 
-  .wrap{max-width:560px;margin:0 auto;padding:18px 18px 24px;backdrop-filter:blur(5px);}
-
-  /* Bandeau plateformes (discret en haut) */
-  .platforms-bar{
+  .wrap{
     max-width:560px;
-    margin:0 auto 10px;
-    padding:6px 10px;
-    border-radius:999px;
-    background:rgba(0,0,0,.70);
-    border:1px solid rgba(255,255,255,.24);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
-    backdrop-filter:blur(10px);
-  }
-  .platforms-label{
-    font-size:13px;
-    color:#f5f5f5;
-    opacity:.85;
-  }
-  .platform-icon{
-    width:26px;
-    height:26px;
-    border-radius:8px;
-    overflow:hidden;
-    display:inline-block;
-  }
-  .platform-icon img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    display:block;
-  }
-  .platform-link{
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    border-radius:999px;
-    padding:3px;
-    background:rgba(255,255,255,.06);
-    border:1px solid rgba(255,255,255,.18);
-    text-decoration:none;
-    transition:transform .2s ease, box-shadow .2s ease, background .2s ease, border-color .2s ease;
-    box-shadow:0 6px 16px rgba(0,0,0,.35);
-  }
-  .platform-link:hover{
-    transform:translateY(-2px);
-    background:rgba(255,255,255,.12);
-    border-color:rgba(255,255,255,.46);
-    box-shadow:0 10px 24px rgba(0,0,0,.5);
+    margin:0 auto;
+    padding:18px 18px 24px;
+    backdrop-filter:blur(5px);
   }
 
   .card{
@@ -119,7 +73,13 @@
   .subtitle{font-weight:600; font-size:13px; text-transform:uppercase; letter-spacing:.08em; color:#e9e9e9; opacity:.95; margin-top:4px;}
   .tagline{font-size:14px; color:#f5f5f5; margin:10px auto 6px; max-width:360px; line-height:1.5;}
 
-  .countdown.card{ margin:12px; padding:14px; border-radius:18px; background:rgba(255,255,255,.08); border:1px solid rgba(255,255,255,.18); }
+  .countdown.card{
+    margin:12px;
+    padding:14px;
+    border-radius:18px;
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.18);
+  }
   .cgrid{ display:grid; grid-template-columns:repeat(4,1fr); gap:10px; }
   .cunit{ text-align:center; padding:14px; border-radius:14px; background:rgba(0,0,0,.22); border:1px solid rgba(255,255,255,.12); }
   .cnum{ font-variant-numeric:tabular-nums; font-size:32px; font-weight:900; line-height:1; color:#fff; }
@@ -152,40 +112,89 @@
   @keyframes hf-bob{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
   @keyframes hf-pulse{0%{box-shadow:0 0 0 0 rgba(255,255,255,.45)}70%{box-shadow:0 0 0 10px rgba(255,255,255,0)}100%{box-shadow:0 0 0 0 rgba(255,255,255,0)}}
 
-  .form-wrap{margin:14px 0 4px; padding:18px 20px; border-radius:18px; background:rgba(255,255,255,.08); border:1px solid rgba(255,255,255,.18); text-align:center; backdrop-filter:blur(8px);}
+  .form-wrap{
+    margin:14px 0 4px; padding:18px 20px;
+    border-radius:18px; background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.18); text-align:center;
+    backdrop-filter:blur(8px);
+  }
   .form-wrap p{font-size:14px;color:#e9e9e9;margin:0 0 12px;}
   .form{display:flex; gap:10px; justify-content:center; align-items:flex-start}
-  .form input[type="email"]{flex:1; padding:10px 14px; border-radius:999px; border:1px solid rgba(255,255,255,.25); background:rgba(0,0,0,.35); color:#fff; font-size:14px; outline:none;}
+  .form input[type="email"]{
+    flex:1; padding:10px 14px; border-radius:999px;
+    border:1px solid rgba(255,255,255,.25); background:rgba(0,0,0,.35);
+    color:#fff; font-size:14px; outline:none;
+  }
   .form input::placeholder{color:rgba(255,255,255,.6)}
-  .form button{padding:10px 16px;border-radius:999px;border:0;background:var(--accent);color:#111;font-weight:800;cursor:pointer;}
+  .form button{
+    padding:10px 16px;border-radius:999px;border:0;
+    background:var(--accent);color:#111;font-weight:800;cursor:pointer;
+  }
   @media(max-width:560px){ .form{flex-direction:column;} .form button{width:100%;} }
 
-  .brand{text-align:center; margin-top:18px; color:#ddd; font-size:14px; font-weight:600}
+  /* Barre plateformes en haut */
+  .top-platforms{
+    max-width:560px;
+    margin:10px auto 4px;
+    padding:6px 10px;
+    border-radius:999px;
+    background:rgba(0,0,0,.72);
+    border:1px solid rgba(255,255,255,.24);
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    backdrop-filter:blur(10px);
+  }
+  .top-platforms-left{
+    font-size:11px;
+    text-transform:uppercase;
+    letter-spacing:.16em;
+    color:#e5e5e5;
+    opacity:.9;
+  }
+  .top-platforms-icons{
+    display:flex;
+    align-items:center;
+    gap:6px;
+  }
+  .top-platforms-icons a{
+    display:inline-flex;
+    padding:2px;
+    border-radius:8px;
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.18);
+    text-decoration:none;
+    transition:transform .16s ease, background .16s ease, box-shadow .16s ease, border-color .16s ease;
+  }
+  .top-platforms-icons a:hover{
+    transform:translateY(-1px);
+    background:rgba(255,255,255,.16);
+    border-color:rgba(255,255,255,.4);
+    box-shadow:0 6px 18px rgba(0,0,0,.45);
+  }
+  .top-platforms-icons img{
+    width:20px;
+    height:20px;
+    border-radius:5px;
+    display:block;
+    object-fit:cover;
+  }
 
+  /* Footer */
+  .footer-block{
+    margin-top:18px;
+    text-align:center;
+    color:#ddd;
+    font-size:13px;
+  }
+  .brand{margin-top:4px; font-weight:600}
   .small-note{font-size:13px;color:#ddd;margin:6px 0 0;}
 </style>
 </head>
 <body>
 
-  <!-- Bandeau plateformes discret en haut -->
-  <nav class="platforms-bar" aria-label="Listen to Malïao">
-    <span class="platforms-label">Listen to Malïao:</span>
-    <a class="platform-link" href="https://open.spotify.com/artist/TON_ID_SPOTIFY" target="_blank" aria-label="Spotify">
-      <span class="platform-icon">
-        <img src="https://github.com/maliaowith2dots-tech/Releases/blob/main/http___gather.fandalism.com_hyperfollowicons-spotify.jpeg?raw=true" alt="Spotify">
-      </span>
-    </a>
-    <a class="platform-link" href="https://music.youtube.com/channel/TON_ID" target="_blank" aria-label="YouTube Music">
-      <span class="platform-icon">
-        <img src="https://github.com/maliaowith2dots-tech/Releases/blob/main/Youtubemusic.png?raw=true" alt="YouTube Music">
-      </span>
-    </a>
-    <a class="platform-link" href="https://www.deezer.com/fr/artist/TON_ID" target="_blank" aria-label="Deezer">
-      <span class="platform-icon">
-        <img src="https://github.com/maliaowith2dots-tech/Releases/blob/main/Deezer.jpeg?raw=true" alt="Deezer">
-      </span>
-    </a>
-  </nav>
+  <!-- BARRE PLATEFORMES EN HAUT -->
+ 
 
   <main class="wrap">
 
@@ -202,8 +211,8 @@
         <div class="cgrid">
           <div class="cunit"><div id="cd" class="cnum">00</div><div class="clab">Days</div></div>
           <div class="cunit"><div id="ch" class="cnum">00</div><div class="clab">Hours</div></div>
-          <div class="cunit"><div id="cm" class="cnum">00</div><div class="clab">Minutes</div></div>
-          <div class="cunit"><div id="cs" class="cnum">00</div><div class="clab">Seconds</div></div>
+          <div class="cunit"><div id="cm" class="cnum">Minutes</div></div>
+          <div class="cunit"><div id="cs" class="cnum">Seconds</div></div>
         </div>
       </section>
 
@@ -254,9 +263,9 @@
         <a class="hf-fly"
            href="https://distrokid.com/hyperfollow/malao/friday"
            target="_blank" rel="noopener"
-           aria-label="Listen to Malïao on your preferred streaming platform">
+           aria-label="Listen to Friday on your preferred streaming platform">
           <span class="dot" aria-hidden="true"></span>
-          <span>Listen to Malïao on all platforms</span>
+          <span>Listen to FRIDAY on all platforms</span>
           <span class="arrow" aria-hidden="true">↗</span>
         </a>
       </div>
@@ -274,7 +283,11 @@
       <div id="email-error" style="color:#ff8a8a;font-size:12px;margin-top:8px;min-height:16px;"></div>
     </section>
 
-    <div class="brand">© <span id="y"></span> MALÏAO & HOMEMAD. PROD</div>
+    <!-- ===== FOOTER ===== -->
+    <footer class="footer-block">
+      <div class="brand">© <span id="y"></span> MALÏAO & HOMEMAD. PROD</div>
+    </footer>
+
   </main>
 
 <script>
