--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
   *{box-sizing:border-box}
   html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;color:var(--fg);}
 
-  /* BG : pochette NEONS floutée */
   body::before{
     content:""; position:fixed; inset:0;
     background:
@@ -50,16 +49,12 @@
     filter:blur(28px) brightness(0.9); z-index:-1; transform:scale(1.08);
   }
 
-  .wrap{
-    max-width:560px;
-    margin:0 auto;
-    padding:18px 18px 24px;
-    backdrop-filter:blur(5px);
-  }
+  .wrap{max-width:560px;margin:0 auto;padding:18px 18px 24px;backdrop-filter:blur(5px);}
 
   .card{
     background:var(--card); border-radius:20px; backdrop-filter:blur(10px);
-    border:1px solid var(--line); box-shadow:0 8px 20px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,0.04);
+    border:1px solid var(--line);
+    box-shadow:0 8px 20px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,0.04);
     overflow:hidden; margin-bottom:14px;
   }
   .card-header{text-align:center;padding:20px 20px 14px;}
@@ -71,19 +66,17 @@
 
   .title{font-weight:800; font-size:18px; margin:2px 0 0; color:#fff;}
   .subtitle{font-weight:600; font-size:13px; text-transform:uppercase; letter-spacing:.08em; color:#e9e9e9; opacity:.95; margin-top:4px;}
-  .tagline{font-size:14px; color:#f5f5f5; margin:10px auto 6px; max-width:360px; line-height:1.5;}
+  .small-note{font-size:13px;color:#ddd;margin:6px 0 0;}
 
   .countdown.card{
-    margin:12px;
-    padding:14px;
-    border-radius:18px;
+    margin:12px; padding:14px; border-radius:18px;
     background:rgba(255,255,255,.08);
     border:1px solid rgba(255,255,255,.18);
   }
   .cgrid{ display:grid; grid-template-columns:repeat(4,1fr); gap:10px; }
   .cunit{ text-align:center; padding:14px; border-radius:14px; background:rgba(0,0,0,.22); border:1px solid rgba(255,255,255,.12); }
   .cnum{ font-variant-numeric:tabular-nums; font-size:32px; font-weight:900; line-height:1; color:#fff; }
-  .clab{ text-transform:uppercase; letter-spacing:.16em; font-size:11px; color:#d7d7d7; }
+  .clab{ text-transform:uppercase; letter-spacing:.16em; font-size:11px; color:#d7d7d7; margin-top:6px;}
   @media (max-width:560px){ .cgrid{ grid-template-columns:repeat(2,1fr); } }
 
   .hidden{display:none !important;}
@@ -112,215 +105,98 @@
   @keyframes hf-bob{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
   @keyframes hf-pulse{0%{box-shadow:0 0 0 0 rgba(255,255,255,.45)}70%{box-shadow:0 0 0 10px rgba(255,255,255,0)}100%{box-shadow:0 0 0 0 rgba(255,255,255,0)}}
 
-  .form-wrap{
-    margin:14px 0 4px; padding:18px 20px;
-    border-radius:18px; background:rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.18); text-align:center;
-    backdrop-filter:blur(8px);
-  }
-  .form-wrap p{font-size:14px;color:#e9e9e9;margin:0 0 12px;}
-  .form{display:flex; gap:10px; justify-content:center; align-items:flex-start}
-  .form input[type="email"]{
-    flex:1; padding:10px 14px; border-radius:999px;
-    border:1px solid rgba(255,255,255,.25); background:rgba(0,0,0,.35);
-    color:#fff; font-size:14px; outline:none;
-  }
-  .form input::placeholder{color:rgba(255,255,255,.6)}
-  .form button{
-    padding:10px 16px;border-radius:999px;border:0;
-    background:var(--accent);color:#111;font-weight:800;cursor:pointer;
-  }
-  @media(max-width:560px){ .form{flex-direction:column;} .form button{width:100%;} }
-
-  /* Barre plateformes en haut */
-  .top-platforms{
-    max-width:560px;
-    margin:10px auto 4px;
-    padding:6px 10px;
-    border-radius:999px;
-    background:rgba(0,0,0,.72);
-    border:1px solid rgba(255,255,255,.24);
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    backdrop-filter:blur(10px);
-  }
-  .top-platforms-left{
-    font-size:11px;
-    text-transform:uppercase;
-    letter-spacing:.16em;
-    color:#e5e5e5;
-    opacity:.9;
-  }
-  .top-platforms-icons{
-    display:flex;
-    align-items:center;
-    gap:6px;
-  }
-  .top-platforms-icons a{
-    display:inline-flex;
-    padding:2px;
-    border-radius:8px;
-    background:rgba(255,255,255,.08);
-    border:1px solid rgba(255,255,255,.18);
-    text-decoration:none;
-    transition:transform .16s ease, background .16s ease, box-shadow .16s ease, border-color .16s ease;
-  }
-  .top-platforms-icons a:hover{
-    transform:translateY(-1px);
-    background:rgba(255,255,255,.16);
-    border-color:rgba(255,255,255,.4);
-    box-shadow:0 6px 18px rgba(0,0,0,.45);
-  }
-  .top-platforms-icons img{
-    width:20px;
-    height:20px;
-    border-radius:5px;
-    display:block;
-    object-fit:cover;
-  }
-
-  /* Footer */
-  .footer-block{
-    margin-top:18px;
-    text-align:center;
-    color:#ddd;
-    font-size:13px;
-  }
-  .brand{margin-top:4px; font-weight:600}
-  .small-note{font-size:13px;color:#ddd;margin:6px 0 0;}
+  .footer-block{margin-top:18px;text-align:center;color:#ddd;font-size:13px;}
+  .brand{margin-top:4px;font-weight:600}
 </style>
 </head>
+
 <body>
+<main class="wrap">
 
-  <!-- BARRE PLATEFORMES EN HAUT -->
- 
+  <!-- ===== NEONS ===== -->
+  <section class="card" aria-label="NEONS">
+    <div class="card-header">
+      <img class="neons-cover" src="https://raw.githubusercontent.com/maliaowith2dots-tech/Releases/refs/heads/main/Neonscover2.png" alt="Malïao — NEONS cover" loading="lazy">
+      <div class="title">NEONS</div>
+      <div class="subtitle neons-subtitle">New single · 16 Jan 2026</div>
+    </div>
 
-  <main class="wrap">
-
-    <!-- ===== NEONS : compte à rebours + vidéo (post-release) ===== -->
-    <section class="card" aria-label="NEONS">
-      <div class="card-header">
-        <img class="neons-cover" src="https://raw.githubusercontent.com/maliaowith2dots-tech/Releases/refs/heads/main/Neonscover2.png" alt="Malïao — NEONS cover" loading="lazy">
-        <div class="title">NEONS</div>
-        <div class="subtitle neons-subtitle">New single · 16 Jan 2026</div>
-      
-
-      <!-- COUNTDOWN (pré-release) -->
-      <section id="countdownBlock" class="countdown card" aria-label="Countdown to NEONS">
-        <div class="cgrid">
-          <div class="cunit"><div id="cd" class="cnum">00</div><div class="clab">Days</div></div>
-          <div class="cunit"><div id="ch" class="cnum">00</div><div class="clab">Hours</div></div>
-          <div class="cunit"><div id="cm" class="cnum">Minutes</div></div>
-          <div class="cunit"><div id="cs" class="cnum">Seconds</div></div>
-        </div>
-      </section>
-
-      <!-- NEONS LIVE (après la sortie) -->
-      <section id="neonsVideoBlock" class="video hidden" aria-label="NEONS live">
-        <iframe
-          id="neonsYt"
-          title="Malïao — NEONS (Live)"
-          src=""
-          referrerpolicy="strict-origin-when-cross-origin"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-        </iframe>
-      </section>
-
-      <!-- CTA streaming NEONS -->
-      <div id="neonsCta" class="hf-wrap hidden">
-        <a class="hf-fly"
-           href="https://distrokid.com/hyperfollow/malao/friday"
-           target="_blank" rel="noopener"
-           aria-label="Listen to NEONS and more on your preferred streaming platform">
-          <span class="dot" aria-hidden="true"></span>
-          <span>Listen to NEONS on your favorite streaming platform</span>
-          <span class="arrow" aria-hidden="true">↗</span>
-        </a>
+    <!-- COUNTDOWN (pré-release) -->
+    <section id="countdownBlock" class="countdown card" aria-label="Countdown to NEONS">
+      <div class="cgrid">
+        <div class="cunit"><div id="cd" class="cnum">00</div><div class="clab">Days</div></div>
+        <div class="cunit"><div id="ch" class="cnum">00</div><div class="clab">Hours</div></div>
+        <div class="cunit"><div id="cm" class="cnum">00</div><div class="clab">Minutes</div></div>
+        <div class="cunit"><div id="cs" class="cnum">00</div><div class="clab">Seconds</div></div>
       </div>
     </section>
 
-    <!-- ===== FRIDAY : clip déjà sorti ===== -->
-    <section class="card" aria-label="FRIDAY">
-      <div class="card-header">
-        <div class="subtitle">Out now</div>
-        <div class="title">FRIDAY</div>
-        <p class="small-note">Watch the clip while you wait for NEONS.</p>
-      </div>
-      <section class="video" aria-label="FRIDAY video">
-        <iframe
-          id="fridayYt"
-          title="Malïao — FRIDAY (Official Video)"
-          src="https://www.youtube-nocookie.com/embed/9coxeNKwFvw?rel=0&modestbranding=1"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-        </iframe>
-      </section>
-
-      <div class="hf-wrap">
-        <a class="hf-fly"
-           href="https://distrokid.com/hyperfollow/malao/friday"
-           target="_blank" rel="noopener"
-           aria-label="Listen to Friday on your preferred streaming platform">
-          <span class="dot" aria-hidden="true"></span>
-          <span>Listen to FRIDAY on all platforms</span>
-          <span class="arrow" aria-hidden="true">↗</span>
-        </a>
-      </div>
+    <!-- NEONS VIDEO (après la sortie) -->
+    <section id="neonsVideoBlock" class="video hidden" aria-label="NEONS video">
+      <iframe
+        id="neonsYt"
+        title="Malïao — NEONS"
+        src=""
+        referrerpolicy="strict-origin-when-cross-origin"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
     </section>
 
-    <!-- ===== MAILING LIST ===== -->
-    <section class="form-wrap card" aria-label="Join the list">
-      <p>Be the first to hear the next drops – join the list 👇</p>
-      <form id="joinForm" class="form"
-        action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfY-uGloqACsaDQ4FrtxFkbmlqpo6cumsQ4nCwrQ1dUEt6Xsw/formResponse"
-        method="POST" novalidate>
-        <input id="email" type="email" name="entry.649502797" placeholder="Enter your email" required>
-        <button id="submitBtn" type="submit">Notify Me</button>
-      </form>
-      <div id="email-error" style="color:#ff8a8a;font-size:12px;margin-top:8px;min-height:16px;"></div>
+    <!-- CTA streaming NEONS -->
+    <div id="neonsCta" class="hf-wrap hidden">
+      <a class="hf-fly"
+         href="https://distrokid.com/hyperfollow/malao/neons"
+         target="_blank" rel="noopener"
+         aria-label="Listen to NEONS and more on your preferred streaming platform">
+        <span class="dot" aria-hidden="true"></span>
+        <span>Listen to NEONS on your favorite streaming platform</span>
+        <span class="arrow" aria-hidden="true">↗</span>
+      </a>
+    </div>
+
+   
+  </section>
+
+  <!-- ===== FRIDAY ===== -->
+  <section class="card" aria-label="FRIDAY">
+    <div class="card-header">
+      <div class="subtitle">Out now</div>
+      <div class="title">FRIDAY</div>
+      <p class="small-note">Watch the clip while you wait for NEONS.</p>
+    </div>
+    <section class="video" aria-label="FRIDAY video">
+      <iframe
+        id="fridayYt"
+        title="Malïao — FRIDAY (Official Video)"
+        src="https://www.youtube-nocookie.com/embed/9coxeNKwFvw?rel=0&modestbranding=1"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
     </section>
 
-    <!-- ===== FOOTER ===== -->
-    <footer class="footer-block">
-      <div class="brand">© <span id="y"></span> MALÏAO & HOMEMAD. PROD</div>
-    </footer>
+    <div class="hf-wrap">
+      <a class="hf-fly"
+         href="https://distrokid.com/hyperfollow/malao/friday"
+         target="_blank" rel="noopener"
+         aria-label="Listen to Friday on your preferred streaming platform">
+        <span class="dot" aria-hidden="true"></span>
+        <span>Listen to FRIDAY on your favorite streaming platform</span>
+        <span class="arrow" aria-hidden="true">↗</span>
+      </a>
+    </div>
+  </section>
 
-  </main>
+  <footer class="footer-block">
+    <div class="brand">© <span id="y"></span> MALÏAO & HOMEMAD. PROD</div>
+  </footer>
+
+</main>
 
 <script>
   // Footer year
   document.getElementById('y').textContent = new Date().getFullYear();
-
-  // Inline mailing form
-  const jf = document.getElementById('joinForm');
-  const email = document.getElementById('email');
-  const err = document.getElementById('email-error');
-  const submitBtn = document.getElementById('submitBtn');
-  function isValidEmail(v){ return /^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/.test(v || ""); }
-  jf.addEventListener('submit', async e=>{
-    e.preventDefault();
-    const v = (email.value || '').trim();
-    if(!isValidEmail(v)){
-      err.style.color = '#ff8a8a';
-      err.textContent='Invalid email address. Example: name@example.com';
-      email.focus();
-      return;
-    }
-    submitBtn.disabled = true; submitBtn.textContent = 'Sending…';
-    try{
-      const fd = new FormData(); fd.append('entry.649502797', v);
-      await fetch(jf.action, {method:'POST', mode:'no-cors', body:fd});
-      err.style.color = '#9be37a'; err.textContent = 'You’re in. Thank you! 💛';
-      jf.reset();
-    }catch(_){
-      err.style.color = '#ff8a8a'; err.textContent = 'Could not send. Try again in a moment.';
-    }finally{
-      submitBtn.disabled = false; submitBtn.textContent = 'Notify Me';
-    }
-  });
 
   // Countdown NEONS
   const targetTs = new Date(RELEASE_DATE).getTime();
@@ -328,25 +204,37 @@
   const neonsVideoBlock = document.getElementById('neonsVideoBlock');
   const neonsIframe = document.getElementById('neonsYt');
   const neonsCta = document.getElementById('neonsCta');
+  const neonsFallback = document.getElementById('neonsFallback');
+  const neonsWatchBtn = document.getElementById('neonsWatchBtn');
   const neonsSubtitle = document.querySelector('.neons-subtitle');
 
   function pad(n){ return String(n).padStart(2,'0'); }
 
   function showReleased(){
-    if (neonsSubtitle) {
-      neonsSubtitle.textContent = 'NEONS · out now';
-    }
+    if (neonsSubtitle) neonsSubtitle.textContent = 'NEONS · out now';
     if (elCD) elCD.classList.add('hidden');
 
+    // CTA hyperfollow visible
+    if (neonsCta) neonsCta.classList.remove('hidden');
+
+    // Fallback YouTube direct
+    if (neonsWatchBtn) neonsWatchBtn.href = `https://www.youtube.com/watch?v=${NEONS_ID}`;
+
+    // Tentative embed (plus compatible)
     if (neonsVideoBlock && neonsIframe) {
       neonsVideoBlock.classList.remove('hidden');
-      if (!neonsIframe.src) {
-        neonsIframe.src = `https://www.youtube-nocookie.com/embed/${NEONS_ID}?rel=0&modestbranding=1`;
-      }
-    }
 
-    if (neonsCta) {
-      neonsCta.classList.remove('hidden');
+      const origin = encodeURIComponent(location.origin);
+      neonsIframe.src = `https://www.youtube.com/embed/${NEONS_ID}?rel=0&modestbranding=1&playsinline=1&origin=${origin}`;
+
+      // Si YouTube bloque l’embed (embed off / restriction), on montre un bouton "Watch"
+      // (on ne peut pas détecter l’erreur de l’iframe proprement à cause du cross-origin,
+      // donc on montre le fallback après un court délai)
+      setTimeout(() => {
+        if (neonsFallback) neonsFallback.classList.remove('hidden');
+      }, 1200);
+    } else {
+      if (neonsFallback) neonsFallback.classList.remove('hidden');
     }
   }
 
